@@ -1,0 +1,19 @@
+# Generated by Django 4.1.6 on 2023-03-18 10:32
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('sitemessage', '0003_auto_20210314_1053'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='message',
+            name='group_mark',
+            field=models.CharField(db_column='gmark', db_index=True, default='', help_text='An identifier to group several messages into one.', max_length=128, verbose_name='Group mark'),
+            preserve_default=False,
+        ),
+    ]
